config/paperless-ngx/manifests/namespace.yaml
# Paperless-ngx namespace
apiVersion: v1
kind: Namespace
metadata:
  name: paperless-ngx
  labels:
    app.kubernetes.io/name: paperless-ngx
